# ir_eval

./: README.md  pyproject.toml
src/ir_eval/: __init__.py  metrics.py
tests/: metrics_test.py
