[project]
name = "ir-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Lurch", email = "plurch@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
