[project]
name = "ir_evaluation"
version = "1.0.2"
description = "Information retrieval evaluation metrics in pure python with zero dependencies"
readme = "README.md"
authors = [
    { name = "Patrick Lurch", email = "plurch@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[tool.ir_evaluation.metadata]
license = "MIT"
url = "https://github.com/plurch/ir_evaluation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
